--- a/src/components/graph/styles/index.css
+++ b/src/components/graph/styles/index.css
@@ -1,6 +1,6 @@
 #canvas {
-    height: 800px;
-    width: 800px;
+    height: 100%;
+    width: 100%;
     border: black 5px solid;
     margin-right: auto;
     display: block;
