--- a/src/components/menuGraph/styles/graphMenu.css
+++ b/src/components/menuGraph/styles/graphMenu.css
@@ -2,15 +2,57 @@
     width: 400px;
     height: 100vh;
     background-color: #000000;
-    display: flex;
+    display: block;
     border-right: 1px solid #333333;
-    /* overflow-x: hidden;
-    overflow-y: auto; */
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.addButton,
+.deleteButton {
+    background-color: #4CAF50;
+    /* Green */
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border-radius: 8px;
 }
 
 .graphInput {
     width: 100%;
+    display: block;
     height: 50px;
     background-color: #ffffffa1;
     border: #956C2D 3px solid;
+}
+
+.inputWrapper {
+    position: relative;
+    background-color: transparent;
+}
+
+.deleteButton {
+    position: absolute;
+    top: 0px;
+    right: 5px;
+}
+
+.addButton:hover,
+.deleteButton:hover {
+    background-color: #45a049;
+}
+
+.deleteButton {
+    background-color: #f44336;
+}
+
+.deleteButton:hover {
+    background-color: #da190b;
 }
