--- a/src/components/menuGraph/styles/graphMenu.module.scss
+++ b/src/components/menuGraph/styles/graphMenu.module.scss
@@ -56,3 +56,17 @@
 .deleteButton:hover {
     background-color: #da190b;
 }
+
+.HomePage {
+    position: absolute;
+    cursor: pointer;
+    z-index: 100;
+    background-color: #2121204b;
+    // opacity: 0.6;
+    width: 50px;
+    height: 50px;
+    right: 10px;
+    top: 10px;
+    border-radius: 7px;
+    color: #ffffff
+}
