--- a/src/components/menuGraph/styles/inputs.scss
+++ b/src/components/menuGraph/styles/inputs.scss
@@ -8,6 +8,33 @@
     overflow-y: auto;
 }
 
+.inputBlock {
+    width: 100%;
+    height: 75px;
+    display: flex;
+    direction: row;
+}
+
+.inputHandler {
+    background-color: #b39e9e;
+    color: white;
+    height: 100%;
+    width: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    cursor: all-scroll;
+    button {
+        width: 25px;
+        height: 25px;
+        margin: 0 auto;
+        border-radius: 50px;
+        border: none;
+        cursor: pointer;
+    }
+}
+
 .addButton,
 .deleteButton {
     background-color: #4CAF50;
@@ -25,19 +52,28 @@
     border-radius: 8px;
 }
 
+.activeGraph {
+    background-color: rgb(112, 181, 212);
+}
+
+.disabletGraph {
+    opacity: 0.8;
+}
+
 .graphInput {
     width: 100%;
+    height: 100%;
     display: block;
-    height: 75px;
     background-color: #ffffffa1;
     border-bottom: #956C2D 3px solid;
-    padding: 10px;
+    padding: 5px 10px;
     text-align: start;
 }
 
 .inputWrapper {
     position: relative;
     background-color: transparent;
+    margin-bottom: 10px;
 }
 
 .deleteButton {
