--- a/src/components/menuGraph/styles/inputs.scss
+++ b/src/components/menuGraph/styles/inputs.scss
@@ -1,11 +1,12 @@
 .graphBlockInput {
-    width: 400px;
-    height: 100vh;
+    // width: 400px;
+    // height: 100vh;
     background-color: #212120;
-    display: block;
+    // display: block;
     border-right: 1px solid #333333;
     overflow-x: hidden;
     overflow-y: auto;
+    flex: 0 1 400px;
 }
 
 .inputBlock {
