--- a/src/styles/body.scss
+++ b/src/styles/body.scss
@@ -1,10 +1,16 @@
 body,
 html,
-#toot {
+#root {
     background-color: #212120;
     overflow: hidden;
-    width: 100vw;
-    height: 100vh;
+    // width: 100vw;
+    // height: 100vh;
+    // width: 100%;
+    // height: 100vh;
+    // display: flex;
+    // flex-direction: column;
+    min-height: 100vh;
+    overflow: hidden;
 }
 
 
