reset pos && start intersection

--- a/src/components/menuGraph/styles/graphMenu.module.scss
+++ b/src/components/menuGraph/styles/graphMenu.module.scss
@@ -1,4 +1,5 @@
-@import "./inputs.scss";
+@import "./inputs.scss",
+"./graphBlock.scss";
 .HomePage {
     position: absolute;
     cursor: pointer;
