--- a/src/components/graph/styles/graph.module.scss
+++ b/src/components/graph/styles/graph.module.scss
@@ -1,12 +1,30 @@
 .graphBlock {
     height: 100vh;
     display: flex;
-    order: 0;
-    display: flex;
     flex-direction: row;
     flex: 1 1;
-    order: 0;
     height: calc(100vh - 50px);
+    width: 100%;
+}
+
+@media (max-width: 800px) {
+    .graphBlock {
+        flex-direction: column-reverse;
+    }
+}
+
+.MenuBlock {
+    width: 400px;
+    height: 100%;
+}
+
+@media (max-width: 800px) {
+    .MenuBlock {
+        width: 100% !important;
+        max-height: 40%;
+        min-height: 30%;
+        overflow-y: auto;
+    }
 }
 
 .canvasBlock {
@@ -17,13 +35,5 @@
         height: 100%;
         background: #222;
         overflow: hidden;
-    }
-}
-
-.graph-container {
-    flex: 1;
-    &>canvas {
-        width: 100%;
-        height: 100%;
     }
 }
