--- a/src/components/menuGraph/styles/graphMenu.module.scss
+++ b/src/components/menuGraph/styles/graphMenu.module.scss
@@ -1,57 +1,3 @@
 @import "./inputs.scss",
-"./graphBlock.scss";
-.HomePage,
-.scalePage {
-    display: flex;
-    cursor: pointer;
-    background-color: #2121204b;
-    width: 50px;
-    height: 50px;
-    border-radius: 7px;
-    margin: 5px;
-    z-index: 100;
-    transition: all 0.5s;
-}
-
-.RightElement {
-    position: absolute;
-    top: 10px;
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    gap: 2.5px;
-    z-index: 100;
-}
-
-.settingBlock {
-    width: 100%;
-    height: 75px;
-    background-color: linear-gradient(45, #040404, #141414);
-    border-bottom: 1px white solid;
-    align-items: center;
-}
-
-.scaleBlock {
-    margin-top: 5px;
-}
-
-.hiddenMenu,
-.hiddenMenuOutside {
-    position: absolute;
-    float: right;
-    z-index: 100;
-    top: 50%;
-    right: 0;
-    button {
-        background: none;
-        border: none;
-        cursor: pointer;
-        width: 50px;
-        height: 50px;
-        border-radius: 7px;
-        margin: 5px;
-        &:hover {
-            transform: scale(1.05);
-        }
-    }
-}
+"./graphBlock.scss",
+"./rightMenu.scss";
