--- a/src/components/menuGraph/styles/graphMenu.module.scss
+++ b/src/components/menuGraph/styles/graphMenu.module.scss
@@ -1,3 +1,1 @@
-@import "./inputs.scss",
-"./graphBlock.scss",
-"./rightMenu.scss";
+@import './inputs.scss', './graphBlock.scss', './rightMenu.scss';
