--- a/src/components/footer/styles/footer.module.scss
+++ b/src/components/footer/styles/footer.module.scss
@@ -1,21 +1,21 @@
 .footerBlock {
-    width: 100%;
-    height: 50px;
-    background-color: #1A1A1A;
-    border-top: 1px #121212 solid;
-    &>span {
-        a {
-            text-decoration: none;
-        }
+  width: 100%;
+  height: 50px;
+  background-color: #1a1a1a;
+  border-top: 1px #121212 solid;
+  & > span {
+    a {
+      text-decoration: none;
     }
+  }
 }
 
 .GithubLink {
-    display: inline-flex;
+  display: inline-flex;
 }
 
 .footerGitHubIconImg {
-    height: 50px;
-    border-radius: 25px;
-    padding: 2px;
+  height: 50px;
+  border-radius: 25px;
+  padding: 2px;
 }
