--- a/src/components/graph/styles/graph.module.scss
+++ b/src/components/graph/styles/graph.module.scss
@@ -1,28 +1,18 @@
-.graphBlock {
+.graph {
   display: flex;
   flex-direction: row;
   flex: 1 1;
-  height: 100%;
+  height: calc(100% - 50px);
   width: 100%;
 }
 
 @media (max-width: 800px) {
-  .graphBlock {
+  .graph {
     flex-direction: column-reverse;
   }
 }
 
-.MenuBlock {
-  width: 400px;
-  height: 100%;
-}
-
 @media (max-width: 800px) {
-  .MenuBlock {
-    width: 100% !important;
-    min-height: 50% !important;
-    overflow-y: auto;
-  }
   .canvasBlock {
     min-height: 50%;
   }
