--- a/src/components/menuGraph/styles/graphBlock.scss
+++ b/src/components/menuGraph/styles/graphBlock.scss
@@ -8,6 +8,19 @@
   flex-wrap: nowrap;
 }
 
+.MenuBlock {
+  width: 400px;
+  height: 100%;
+}
+
+@media (max-width: 800px) {
+  .MenuBlock {
+    width: 100% !important;
+    min-height: 50% !important;
+    overflow-y: auto;
+  }
+}
+
 .inputBlock {
   width: 100%;
   height: 75px;
